# my_test_pypackage

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/my_test_pypackage/: __init__.py  my_math.py
tests/: test_addition.py
