[project]
name = "my-test-pypackage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben", email = "bennyp2494@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
my-test-pypackage = "my_test_pypackage:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"
